# Twitter-Archive

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  python-publish.yml  python-version-test.yml
TwitterArchive/: cli.py  core.py
docs/: TwitterArchive.rst  conf.py  index.rst  modules.rst  twitter_dev_setup.md
src/: bookmarker.py  dat.py  main.py  requirements.txt
tests/unit/: test_cil.py  test_http.py
