[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-archive"
description = "A Suite of Twitter Archival Tools"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Joshua Arulsamy", email = "joshua.gf.arul@gmail.com" }]
# classifiers = [
# ]
dependencies = [
    "python-dotenv ~= 0.20.0",
    "requests ~= 2.28.1",
    "tqdm ~= 4.64.0",
    "tweepy ~= 4.10.0",
]
dynamic = ["version"]

[project.scripts]
twitter-archive = "TwitterArchive.cli:main"

[tool.setuptools]
packages = ["TwitterArchive"]

[tool.setuptools.dynamic]
version = { attr = "TwitterArchive.__version__" }
