[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-archive"
description = "A CLI tool to download media from bookmarked tweets."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Joshua Arulsamy", email = "joshua.gf.arul@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Archiving",
]
dependencies = [
    "python-dotenv ~= 0.20.0",
    "requests ~= 2.28.1",
    "tqdm ~= 4.64.0",
    "tweepy ~= 4.10.0",
]
dynamic = ["version"]

[project.scripts]
twitter-archive = "TwitterArchive.cli:main"

[tool.setuptools]
packages = ["TwitterArchive"]

[tool.setuptools.dynamic]
version = { attr = "TwitterArchive.__version__" }
